# solana-trading-bot

./: README.md  main.py  pyproject.toml
botlib/: __main__.py
rs/: Cargo.toml
rs/src/: lib.rs
